# rabbitmq-utils

./: .gitignore  README.md  __init__.py  consumer.py  producer.py  pyproject.toml  requirements.txt
.build/: build.sh  setup.py  upload.sh  upload_test.sh
docker/: TLS-README.md  docker-compose-tls.yml  docker-compose.yml  rabbitmq.conf
rpc/: client.py  server.py
src/rabbitmq_utils/: __init__.py  consumer.py  producer.py
src/rabbitmq_utils/rpc/: __init__.py  client.py  server.py
tests/normal/: consumer.py  producer.py  rpc_client.py  rpc_server.py
tests/tls/: consumer.py  producer.py  rpc_client.py  rpc_server.py
