[project]
name = "rabbitmq-utils"
version = "1.5.0"
description = "Utilities for working with RabbitMQ"
authors = [
    { name="Tahir Rafique", email="tahirrafiqueasad@gmail.com" }
]
dependencies = [
    "pika>=1.3.0"
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
